--- a/api/package.json
+++ b/api/package.json
@@ -7,9 +7,14 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
     "hono": "^4.9.6"
   },
   "devDependencies": {
+    "@types/node": "^24.3.1",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.5",
     "wrangler": "^4.4.0"
   }
 }
