--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@auth/core": "^0.40.0",
     "@hono/auth-js": "^1.1.0",
+    "@hono/zod-validator": "^0.7.4",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
-    "hono": "^4.9.9"
+    "hono": "^4.9.9",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
