--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "test": "vitest"
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
@@ -16,9 +17,11 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@cloudflare/vitest-pool-workers": "^0.10.3",
     "@types/node": "^24.3.1",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
+    "vitest": "~3.2.0",
     "wrangler": "^4.4.0"
   }
 }
