--- a/api/wrangler.jsonc
+++ b/api/wrangler.jsonc
@@ -3,9 +3,9 @@
   "name": "themepark-assistant",
   "main": "src/index.ts",
   "compatibility_date": "2025-09-07",
-  // "compatibility_flags": [
-  //   "nodejs_compat"
-  // ],
+  "compatibility_flags": [
+    "nodejs_compat"
+  ],
   // "vars": {
   //   "MY_VAR": "my-variable"
   // },
